# openSDLC

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  GEMINI.md  POC_SPEC.md  fix.md  openSDLC_analysis.md  package.json  pyrightconfig.json  run_dev.sh  todo2.md
backend/: .coverage  alembic.ini  pyproject.toml  run_server.py  todo.md
backend/agent-config-overrides/: CodeAgent.override.yaml  CoordAgent.override.yaml  PMAgent.override.yaml  TestAgent.override.yaml  ValidatorAgent.override.yaml
backend/alembic/: env.py
backend/alembic/versions/: 0ee897bfd02e_add_workspace_path_to_runs.py  180f15f2fefb_add_webhook_columns_to_runs.py  5a9668ff4ada_initial_schema.py  b8e51bb17c31_add_indexes_on_fk_columns.py
backend/app/: auth.py  main.py
backend/data/: opensdlc.db
backend/pipelines/: full_spiral.yaml
backend/tests/: conftest.py  test_adversarial_mandate.py  test_api_endpoints.py  test_auth.py  test_code_merge.py  test_event_bus.py  test_fix_issue_1_2.py  test_llm_client_ollama.py  test_pipeline_validation.py  test_pm_decision_parsing.py  test_print_capture.py  test_resume.py  test_run_creation.py  test_usage.py  test_webhook.py  test_zombie_cleanup.py
poc/: POC_SPEC.md  explanation.md  pyproject.toml  run_poc.py
poc/agent-config-overrides/: PMAgent.override.yaml  ReqAgent.override.yaml
poc/docs/: impl_artifact.yaml  uc_artifact.yaml  validation_report.yaml
poc/pipelines/: full_spiral.yaml  poc_classic.yaml
poc/src/: config.py  llm_client.py
poc/tests/: check_db_data.py  test_context_isolation.py  test_parser.py  test_validation_quality.py
(+259 files in other folders)
